fixed jsp pages href's